[gd_scene load_steps=13 format=2]

[ext_resource path="res://Enemies/Melee/Melee_Enemy.gd" type="Script" id=1]
[ext_resource path="res://Enemies/Enemy.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Melee/Enemy Slice spritesheet.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 288, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 384, 0, 96, 96 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 28.5, 25 )

[sub_resource type="RectangleShape2D" id=6]

[sub_resource type="Animation" id=8]
resource_name = "Melee"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimatedSprite/Area2D/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="Melee_Enemy" type="KinematicBody2D" groups=["Melee Enemies", "enemies"]]
collision_layer = 2
collision_mask = 11
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 5 )

[node name="Area2D" type="Area2D" parent="AnimatedSprite"]
collision_layer = 16
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite/Area2D"]
position = Vector2( 0.5, -2 )
shape = SubResource( 7 )
disabled = true

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="Cooldown" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 3, 3 )
shape = SubResource( 6 )

[node name="Anim" type="AnimationPlayer" parent="."]
anims/Melee = SubResource( 8 )

[node name="VarTim" type="Timer" parent="."]

[node name="RandMov" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="body_entered" from="AnimatedSprite/Area2D" to="." method="OnArea2DBodyEntered"]
[connection signal="timeout" from="Cooldown" to="." method="OnCooldownTimeout"]
[connection signal="timeout" from="RandMov" to="." method="_on_RandMov_timeout"]
